--- a/less/global.less
+++ b/less/global.less
@@ -10,6 +10,7 @@
 
   html,
   body {
+    overflow-x:hidden;
     font-family: 'Source Sans Pro', sans-serif;
     margin: 0 auto;
   }
